# 496

./: .gitignore  .gitmodules  README.md  thescript.sh  udev.rules  vesc_mcconf_sensored_untuned.xml
VESC-python/: NRC-2-vesc.py  NRC-PMW-vesc.py  NRC-vesc.py  VESC-control.py
VESC-python/pyvesc/: interface.py
VESC-python/pyvesc/examples/: get_values.py  plottest.py  simple.py  test.py
VESC-python/pyvesc/messages/: base.py  getters.py  setters.py
docker_practice/: Dockerfile
dockerfiles/: build-development.sh  build-jetson.sh  build-visualization.sh
dockerfiles/development/: Dockerfile
dockerfiles/jetson/: Dockerfile
dockerfiles/viz/: Dockerfile
img-capture/functional/: camera-temp.py  camera.py  camera2.py  camera3.py  kill.sh  script.sh
img-capture/test/: cont-img.py  official.py
img-capture/tutorial/: avg_pix.py  opencv_tutorial.py  res.py
log/: latest_build
nn-files/: .finding-boxes.py.swp
python_scripts/: find-boxes.py  plot_height_map.py
ros_scripts/: Dockerfile  button.sh  docker-jetson-camera.sh  docker-w-devices.sh  docker-w-gps.sh  docker-w-imu.sh  docker.sh  imu_vesc_button.sh  jetson-w-devices.sh  laptop-dev.sh  laptop-develop.sh  laptop-rviz-dev.sh
ros_ws/: launch_slam.sh
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/launch/: driver_launch.xml
ros_ws/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/launch/log/: latest_build
ros_ws/log/: latest_build  latest_test
ros_ws/navigation/: setup.py
ros_ws/record/: extract_odom_coords.sh  record_all_topics_bag.sh  record_odom_bag.sh
ros_ws/record/all_topics_bag_20240314_200118.bag/: all_topics_bag_20240314_200118.bag_0.db3  metadata.yaml
ros_ws/record/all_topics_bag_20240314_200229.bag/: all_topics_bag_20240314_200229.bag_0.db3  metadata.yaml
ros_ws/record/all_topics_bag_20240325_182529.bag/: metadata.yaml
ros_ws/record/box-1/: metadata.yaml
ros_ws/record/hard-code-driving/: hard-code-driving_0.db3  metadata.yaml
ros_ws/record/label-1/: metadata.yaml
ros_ws/record/laserscan_bag_20240404_194229.bag/: laserscan_bag_20240404_194229.bag_0.db3  metadata.yaml
ros_ws/record/odom_bag_20240305_220212.bag/: metadata.yaml  odom_bag_20240305_220212.bag_0.db3
ros_ws/src/: Course dimension.xcf
ros_ws/src/ATGM336H_NMEA_ROS2/: package.xml  setup.cfg
ros_ws/src/ATGM336H_NMEA_ROS2/atgm336h5n3x/: atgm336h_serial.py
ros_ws/src/ackermann/: package.xml  setup.cfg  setup.py
ros_ws/src/ackermann/ackermann/: ack-test.py
ros_ws/src/ackermann_message/: package.xml  setup.cfg  setup.py
ros_ws/src/ackermann_message/ackermann_message/: drive_no_s.py  imu_outdoor.py  imu_turning.py  indoor_message.py  message.py
ros_ws/src/ackermann_msgs/: package.xml  setup.cfg  setup.py
ros_ws/src/ackermann_msgs/ackermann_msgs/: msg.py
ros_ws/src/bounding_boxes/: setup.cfg  setup.py
ros_ws/src/bounding_boxes/bounding_boxes/: boxes.py  get_box_height.py  start_devices.launch
ros_ws/src/boxes_follower/: package.xml  setup.cfg  setup.py
ros_ws/src/boxes_follower/boxes_follower/: follow.py
ros_ws/src/button_publisher/: package.xml  setup.cfg  setup.py
ros_ws/src/button_publisher/button_publisher/: button_publisher.py
ros_ws/src/gps_pub/: package.xml  setup.cfg  setup.py
ros_ws/src/gps_pub/gps_pub/: gps_node.py
ros_ws/src/imu/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/imu/config/: imu.yaml
ros_ws/src/imu/imu/: imu_pub.py
ros_ws/src/imu/include/: SerialInterface.h  Y3SpaceDriver.h
ros_ws/src/imu/launch/: driver.launch
ros_ws/src/imu/scripts/: raw.py
ros_ws/src/imu/src/: SerialInterface.cpp  Y3SpaceDriver.cpp  imu_cpp.cpp
ros_ws/src/imu_cpp/: CMakeLists.txt  package.xml
ros_ws/src/imu_cpp/include/: SerialInterface.h  Y3SpaceDriver.h
ros_ws/src/imu_cpp/src/: Y3SpaceDriver.cpp  imu_cpp.cpp
ros_ws/src/imu_pgt/: CMakeLists.txt  package.xml
ros_ws/src/imu_pgt/include/: Y3SpaceDriver2.hpp
ros_ws/src/imu_pgt/src/: Y3SpaceDriver2.cpp  imu.cpp
ros_ws/src/launch/driver/: driver.launch.xml
ros_ws/src/launch_nodes/: package.xml  setup.cfg  setup.py
ros_ws/src/launch_nodes/launch/: driver.launch  hc_driver.launch  nodriver.launch
ros_ws/src/launch_nodes/launch_nodes/: driver.launch
ros_ws/src/log/: latest_build
ros_ws/src/navigation/: 4_corners_waypoints.txt  4_corners_waypoints_indoors.txt  package.xml  setup.py  small_square.txt  test_waypoints.txt
ros_ws/src/navigation/navigation/: odom_navigation.py  waypoints.py
ros_ws/src/occup-devel/: convert_pgm.py  convert_pgm2.py  occtest.pgm  outtest.pgm
ros_ws/src/rand_num_publisher/: setup.cfg  setup.py
ros_ws/src/rand_num_publisher/rand_num_publisher/: rand.py
ros_ws/src/rob_lowe_launch/: ekf.yaml  ekf_imu.yaml  ekf_odom.yaml  ekf_odom_imu.yaml  ekf_odom_imu_occupancy.yaml  localization_launch.py  localization_params.yaml  package.xml  setup.cfg  setup.py
ros_ws/src/rob_lowe_launch/config/: localization_params.yaml
ros_ws/src/rob_lowe_launch/include/: course.pgm  occup_grid.yaml  occup_grid_matrix.yaml
ros_ws/src/rob_lowe_launch/launch/: ekf.launch.py  localization.launch.py
ros_ws/src/slam/: package.xml  setup.py
ros_ws/src/vesc_voltage/: package.xml  setup.cfg  setup.py
src/ATGM336H_NMEA_ROS2/: README.md  setup.py
src/ATGM336H_NMEA_ROS2/atgm336h5n3x/: atgm336h_serial.py  nmea_node.py
test/: model-2024-01-29-00_32-320x240-59671.keras
vesc/vesc_driver/launch/: vesc_driver_node.launch  vesc_driver_nodelet.launch
(+60 files in other folders)
