<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu</name>
  <version>0.0.0</version>
  <description>Yost Lab-Space ROS Driver Package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>serial_driver</depend>
  <depend>std_msgs</depend>

</package>
