<?xml version="1.0"?>
<package format="2">
  <name>y3space_driver</name>
  <version>0.0.0</version>
  <description>Yost Lab 3-Space ROS Driver Package</description>

  <maintainer email="jgomallette@gmail.com">Jeremy (MrCerealKiller)</maintainer>
  <author email="cagatay@robostate.com">cagatay</author>
  <author email="jgomallette@gmail.com">Jeremy (MrCerealKiller)</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>

</package>
